--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <h2><span>Value No.1 GS</span>사업소개</h2>
           <p>GS는 에너지, 유통, 건설·서비스 등 <br class="mo_br">주력사업에 핵심역량을 집중하고 있습니다.</p>
           <div class="mo_busi_slider">
-            <ul>
+            <ul class="business">
               <li>
                 <div class="busi_img"><img src="img/transparent.png" alt="gs글로벌"></div>
                 <div class="busi_title">
@@ -138,8 +138,8 @@
                 </div>
                 <ul class="busi_fam clearfix">
                   <li><a href="#">GS칼텍스</a></li>
-                  <li><a href="#">GS에너지</a></li>
                   <li><a href="#">GS EPS</a></li>
+                  <li><a href="#">GS에너지</a></li>
                   <li><a href="#">GS E&R</a></li>
                 </ul>
                 <p class="mo_blind">GS칼텍스는 최고의 에너지 서비스를 제공하기 위해 에너지의 새로운 가치를 만들어 가고 있습니다.</p>
