--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </header>
     <main id="main">
       <div class="main_visual">
-        <video src="media/gs_main_visual.mp4" muted autoplay loop></video>
+        <video src="media/gs_main_visual.mp4" muted autoplay loop playsinline></video>
         <div class="container">
           <div class="visual_txt">
             <p>고객만족을<br>최고로 하는 기업</p>
