--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
   <title>GS그룹</title>
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/main.css">
   <script src="js/jquery.min.js"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </head>
 <body>
@@ -118,8 +120,8 @@
           <h2><span>Value No.1 GS</span>사업소개</h2>
           <p>GS는 에너지, 유통, 건설·서비스 등 <br class="mo_br">주력사업에 핵심역량을 집중하고 있습니다.</p>
           <div class="mo_busi_slider">
-            <ul class="business">
-              <li>
+            <ul class="business clearfix">
+              <li class="slide1">
                 <div class="busi_img"><img src="img/transparent.png" alt="gs글로벌"></div>
                 <div class="busi_title">
                   <h3><span>성장동력의 혈맥</span>유통 &middot; 무역 부문</h3>
@@ -131,7 +133,7 @@
                 </ul>
                 <p class="mo_blind">GS글로벌은 사업 및 서비스의 확장을 통해 대고객 서비스 역량 강화에 주력하고 있습니다.</p>
               </li>
-              <li>
+              <li class="slide2">
                 <div class="busi_img"><img src="img/transparent.png" alt="gs칼텍스"></div>
                 <div class="busi_title">
                   <h3><span>지속성장의 심장</span>에너지 &middot; 발전 부문</h3>
@@ -144,7 +146,7 @@
                 </ul>
                 <p class="mo_blind">GS칼텍스는 최고의 에너지 서비스를 제공하기 위해 에너지의 새로운 가치를 만들어 가고 있습니다.</p>
               </li>
-              <li>
+              <li class="slide3">
                 <div class="busi_img"><img src="img/transparent.png" alt="gs건설"></div>
                 <div class="busi_title">
                   <h3><span>지속성장의 심장</span>건설 &middot; 서비스 부문</h3>
