--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/main.css">
   <script src="js/jquery.min.js"></script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </head>
 <body>
@@ -125,10 +124,10 @@
               <div class="busi_title">
                 <h3><span>성장동력의 혈맥</span>유통 &middot; 무역 부문</h3>
               </div>
-              <ul class="busi_fam clearfix">
-                <li><a href="#">GS글로벌</a></li>
-                <li><a href="#">GS리테일</a></li>
-                <li><a href="#">GS홈쇼핑</a></li>
+              <ul class="busi_fam">
+                <li><a href="#"><span>GS글로벌</span></a></li>
+                <li><a href="#"><span>GS리테일</span></a></li>
+                <li><a href="#"><span>GS홈쇼핑</span></a></li>
               </ul>
               <p class="mo_blind">GS글로벌은 사업 및 서비스의 확장을 통해 대고객 서비스 역량 강화에 주력하고 있습니다.</p>
             </li>
@@ -137,11 +136,11 @@
               <div class="busi_title">
                 <h3><span>지속성장의 심장</span>에너지 &middot; 발전 부문</h3>
               </div>
-              <ul class="busi_fam clearfix">
-                <li><a href="#">GS칼텍스</a></li>
-                <li><a href="#">GS EPS</a></li>
-                <li><a href="#">GS에너지</a></li>
-                <li><a href="#">GS E&R</a></li>
+              <ul class="busi_fam">
+                <li><a href="#"><span>GS칼텍스</span></a></li>
+                <li><a href="#"><span>GS EPS</span></a></li>
+                <li><a href="#"><span>GS에너지</span></a></li>
+                <li><a href="#"><span>GS E&R</span></a></li>
               </ul>
               <p class="mo_blind">GS칼텍스는 최고의 에너지 서비스를 제공하기 위해 에너지의 새로운 가치를 만들어 가고 있습니다.</p>
             </li>
@@ -150,9 +149,9 @@
               <div class="busi_title">
                 <h3><span>지속성장의 심장</span>건설 &middot; 서비스 부문</h3>
               </div>
-              <ul class="busi_fam clearfix">
-                <li><a href="#">GS건설</a></li>
-                <li><a href="#">GS스포츠</a></li>
+              <ul class="busi_fam">
+                <li><a href="#"><span>GS건설</span></a></li>
+                <li><a href="#"><span>GS스포츠</span></a></li>
               </ul>
               <p class="mo_blind">GS건설은 시공능력과 엔지니어링 기술을 확보한 최고 수준의 건설회사로 거듭나고 있습니다.</p>
             </li>
@@ -164,33 +163,34 @@
           <h2><span>Grow with uS, GS</span>지속가능경영</h2>
           <p>GS는 고객과 함께 <br class="mo_br">내일을 꿈꾸며 새로운 삶의 가치를 창조합니다.</p>
           <div class="manage_slider">
-            <ul>
-              <li>
+            <div class="slide1">
+              <div class="mng_slide_inner">
+                <div><img src="img/transparent.png" alt="고객성장"></div>
                 <h3>고객성장</h3>
                 <p class="pc_gs">고객만족을 최고의 사명으로 하는 생활 속의 파트너가 되기 위해 최선을 다하겠습니다.</p>
                 <a href="#">자세히보기</a>
-              </li>
-              <li>
-                <h3>윤리경영</h3>
-                <p class="pc_gs">기업의 사회적 역할과 책임을 성실히 수행해 나가는 건전한 기업시민이 되겠습니다.</p>
-                <a href="#">자세히보기</a>
-              </li>
-              <li>
-                <h3>동반성장</h3>
-                <p class="pc_gs">협력사와 지속가능한 성장을 추진하고 파트너로서 존중하는 상생경영을 추구하겠습니다.</p>
-                <a href="#">자세히보기</a>
-              </li>
-              <li>
-                <h3>사회공헌</h3>
-                <p class="pc_gs">기업의 성과를 사회와 함께 나누어 지역사회 발전을 이루기 위해 노력하고 있습니다.</p>
-                <a href="#">자세히보기</a>
-              </li>
-              <li>
-                <h3>환경경영</h3>
-                <p class="pc_gs">기후변화 대응체제 구축을 통해 안전하고 환경친화적인 기업 경영을 하고 있습니다.</p>
-                <a href="#">자세히보기</a>
-              </li>
-            </ul>
+              </div>
+            </div>
+            <div class="slide2">
+              <h3>윤리경영</h3>
+              <p class="pc_gs">기업의 사회적 역할과 책임을 성실히 수행해 나가는 건전한 기업시민이 되겠습니다.</p>
+              <a href="#">자세히보기</a>
+            </div>
+            <div class="slide3">
+              <h3>동반성장</h3>
+              <p class="pc_gs">협력사와 지속가능한 성장을 추진하고 파트너로서 존중하는 상생경영을 추구하겠습니다.</p>
+              <a href="#">자세히보기</a>
+            </div>
+            <div class="slide4">
+              <h3>사회공헌</h3>
+              <p class="pc_gs">기업의 성과를 사회와 함께 나누어 지역사회 발전을 이루기 위해 노력하고 있습니다.</p>
+              <a href="#">자세히보기</a>
+            </div>
+            <div class="slide5">
+              <h3>환경경영</h3>
+              <p class="pc_gs">기후변화 대응체제 구축을 통해 안전하고 환경친화적인 기업 경영을 하고 있습니다.</p>
+              <a href="#">자세히보기</a>
+            </div>
           </div><!-- manage_slider -->
           <ul class="paging">
             <li><span class="blind">1</span></li>
