--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <section class="management_wrap">
         <div class="container">
           <h2><span>Grow with uS, GS</span>지속가능경영</h2>
-          <p>GS는 고객과 함께 <br class="mo_br">내일을 꿈꾸며 새로운 삶의 가치를 창조합니다.</p>
+          <p>GS는 고객과 함께 내일을 <br class="mo_br">꿈꾸며 새로운 삶의 가치를 창조합니다.</p>
           <div class="manage_slider">
             <div class="slide1">
               <div class="mng_slide_inner">
