--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <li><a href="#"><span>GS리테일</span></a></li>
                 <li><a href="#"><span>GS홈쇼핑</span></a></li>
               </ul>
-              <p class="mo_blind">GS글로벌은 사업 및 서비스의 확장을 통해 대고객 서비스 역량 강화에 주력하고 있습니다.</p>
+              <p class="mo_blind">GS글로벌은 사업 및 서비스의 확장을 통해 서비스 역량 강화에 주력하고 있습니다.</p>
             </li>
             <li>
               <div class="busi_img"><img src="img/transparent.png" alt="gs칼텍스"></div>
@@ -165,38 +165,53 @@
           <p>GS는 고객과 함께 내일을 <br class="mo_br">꿈꾸며 새로운 삶의 가치를 창조합니다.</p>
           <div class="manage_slider">
             <div class="slide slide1">
-              <a class="mng_slide_inner" href="#">
+              <a href="#">
+                <i><span class="blind">자세히보기</span></i>
                 <div class="mng_img"><img src="img/transparent.png" alt="고객성장"></div>
-                <h3>고객성장</h3>
-                <p class="pc_gs">고객만족을 최고의 사명으로 하는 생활 속의 파트너가 되기 위해 최선을 다하겠습니다.</p>
+                <div class="mng_title">
+                  <h3>고객성장</h3>
+                  <p class="pc_gs">고객만족을 최고로 하는 생활 속의 파트너</p>
+                </div>
               </a>
             </div>
             <div class="slide slide2">
-              <a class="mng_slide_inner" href="#">
+              <a href="#">
+                <i><span class="blind">자세히보기</span></i>
                 <div class="mng_img"><img src="img/transparent.png" alt="윤리경영"></div>
-                <h3>윤리경영</h3>
-                <p class="pc_gs">기업의 사회적 역할과 책임을 성실히 수행해 나가는 건전한 기업시민이 되겠습니다.</p>
+                <div class="mng_title">
+                  <h3>윤리경영</h3>
+                  <p class="pc_gs">사회적 역할과 책임을 수행하는 기업시민</p>
+                </div>
               </a>
             </div>
             <div class="slide slide3">
-              <a class="mng_slide_inner" href="#">
+              <a href="#">
+                <i><span class="blind">자세히보기</span></i>
                 <div class="mng_img"><img src="img/transparent.png" alt="동반성장"></div>
-                <h3>동반성장</h3>
-                <p class="pc_gs">협력사와 지속가능한 성장을 추진하고 파트너로서 존중하는 상생경영을 추구하겠습니다.</p>
+                <div class="mng_title">
+                  <h3>동반성장</h3>
+                  <p class="pc_gs">협력사와 파트너로서 존중하는 상생경영</p>
+                </div>
               </a>
             </div>
             <div class="slide slide4">
-              <a class="mng_slide_inner" href="#">
+              <a href="#">
+                <i><span class="blind">자세히보기</span></i>
                 <div class="mng_img"><img src="img/transparent.png" alt="사회공헌"></div>
-                <h3>사회공헌</h3>
-                <p class="pc_gs">기업의 성과를 사회와 함께 나누어 지역사회 발전을 이루기 위해 노력하고 있습니다.</p>
+                <div class="mng_title">
+                  <h3>사회공헌</h3>
+                  <p class="pc_gs">성과를 사회와 나누어 지역사회 발전</p>
+                </div>
               </a>
             </div>
             <div class="slide slide5">
-              <a class="mng_slide_inner" href="#">
+              <a href="#">
+                <i><span class="blind">자세히보기</span></i>
                 <div class="mng_img"><img src="img/transparent.png" alt="환경경영"></div>
-                <h3>환경경영</h3>
-                <p class="pc_gs">기후변화 대응체제 구축을 통해 안전하고 환경친화적인 기업 경영을 하고 있습니다.</p>
+                <div class="mng_title">
+                  <h3>환경경영</h3>
+                  <p class="pc_gs">환경과 인간을 먼저 생각하는 일류기업</p>
+                </div>
               </a>
             </div>
           </div><!-- //manage_slider -->
