--- a/index.html
+++ b/index.html
@@ -245,38 +245,38 @@
           <a href="#" class="news_btn"><b class="blind">뉴스기사 더보기</b></a>
           <ul>
             <li>
-              <a href="#" class="news_content clearfix">
+              <a href="#" class="news_on">
                 <span class="news_date"><b>04.08</b><i>2021</i></span>
                 <span class="news_txt">
                   <strong>GS, 친환경 바이오 스타트업과 함께 미래성장 추구</strong>
-                  <p>㈜GS(대표이사 홍순기 사장, 사진)가 친환경 바이오 스타트업과 함께 미래 성장의 기반을 마련한다.</p>
-                  <p>GS는 8일 서울 강남구 논현로 GS타워에서 ‘더 지에스 챌린지’(The GS Challenge)에 선발된 바이오테크(BT) 스타트업 6개사와 함께 프로그램의 시작을 알리는 ‘스타트업 캠프(Start-up Camp)’를 열었다.</p>
+                  <i>㈜GS(대표이사 홍순기 사장, 사진)가 친환경 바이오 스타트업과 함께 미래 성장의 기반을 마련한다.</i>
                   <b>자세히보기</b>
                 </span>
                 <span class="news_img"><img src="img/transparent.png" alt=""></span>
+                <span class="news_chevron"></span>
               </a>
             </li>
             <li>
-              <a href="#" class="news_content clearfix">
+              <a href="#">
                 <span class="news_date"><b>03.30</b><i>2021</i></span>              
                 <span class="news_txt">
                   <strong>㈜GS, 제  1회 ESG위원회 개최, ESG경영 본격화</strong>
-                  <p>㈜GS(대표이사 홍순기 사장, 사진)는 29일 오전 서울 논현로 GS타워에서 제1회 ESG위원회를 개최했다.</p>
-                  <p>책임 있는 ESG경영을 강화하기 위해 ㈜GS 이사회 산하에 올해 처음으로 신설한 ESG위원회는 지난달 각 계열사별 최고환경책임자(CGO)로 구성된 친환경협의체를 출범시킨데 이은 첫 번째 행보로 GS그룹의 ESG경영이 본격화될 것으로 기대된다.</p>
+                  <i>㈜GS(대표이사 홍순기 사장, 사진)는 29일 오전 서울 논현로 GS타워에서 제1회 ESG위원회를 개최했다.</i>
                   <b>자세히보기</b>
                 </span>
+                <span class="news_chevron"></span>
               </a>
             </li>
             <li>
-              <a href="#" class="news_content clearfix">
+              <a href="#">
                 <span class="news_date"><b>02.25</b><i>2021</i></span>              
                 <span class="news_txt">
                   <strong>GS, 친환경협의체 출범으로 ESG경영 강화</strong>
-                  <p>GS그룹(대표 : 허태수 회장)이 친환경협의체를 출범시키며 ESG경영을 본격 추진한다.</p>
-                  <p>GS는 24일, 서울 강남구 논현로에 위치한 GS타워에서 허태수 GS 회장이 참여한 가운데 각 계열사의 최고환경책임자(Chief Green Officer, 이하 CGO)로 구성된 ‘친환경협의체’를 공식 출범시켰다고 밝혔다.</p>
+                  <i>GS그룹(대표 : 허태수 회장)이 친환경협의체를 출범시키며 ESG경영을 본격 추진한다.</i>
                   <b>자세히보기</b>
                 </span>
-                <img src="img/gs_news_03.png" alt="">
+                <span class="news_img"><img src="img/gs_news_03.png" alt=""></span>
+                <span class="news_chevron"></span>
               </a>
             </li>
           </ul><!-- //news -->
@@ -284,8 +284,8 @@
       </section><!-- //news_wrap -->
     </main>
     <footer id="footer">
-      <div class="container">
-        <a href="#"><span class="blind">GS로고</span></a>
+      <div class="container clearfix">
+        <a href="#" class="footer_logo"><img src="img/gs_logo_on.svg" alt="GS그룹"></a>
         <div class="footer_content">
           <ul>
             <li><a href="#">법적고지</a></li>
@@ -309,6 +309,7 @@
             <li><a href="#" target="_blank">GS스포츠</a></li>
             <li><a href="#" target="_blank">GS 건설</a></li>
           </ul>
+          <span class="fam_icon"></span>
         </div>        
       </div><!-- //container -->
     </footer>
