--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </ul>
             </li>
           </ul>
-          <!-- <div class="gnb_bg"></div> -->
+          <div class="gnb_bg"></div>
           <!-- <span class="gnb_on"></span> -->
           <ul class="mo_lang">
             <li><a href="#">kor</a></li>
