--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <ul id="gnb" class="clearfix">
               <li>
-                <a href="#"><b>GS</b> 소개</a>
+                <a href="#"><b>GS</b> 소개<span class="mo_nav_chevron"></span></a>
                 <ul class="depth_2">
                   <li><a href="#">회사소개</a></li>
                   <li><a href="#">경영이념 및 비전</a></li>
@@ -38,7 +38,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">지속가능경영</a>
+                <a href="#">지속가능경영<span class="mo_nav_chevron"></span></a>
                 <ul class="depth_2">
                   <li><a href="#">고객성장</a></li>
                   <li><a href="#">윤리경영</a></li>
@@ -48,7 +48,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#"><b>GS</b> 소식</a>
+                <a href="#"><b>GS</b> 소식<span class="mo_nav_chevron"></span></a>
                 <ul class="depth_2">
                   <li><a href="#"><b>GS</b> 뉴스</a></li>
                   <li><a href="#">광고, 홍보영상</a></li>
@@ -56,7 +56,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">투자정보</a>
+                <a href="#">투자정보<span class="mo_nav_chevron"></span></a>
                 <ul class="depth_2">
                   <li><a href="#"><b>IR</b> 정보</a></li>
                   <li><a href="#">주가정보</a></li>
@@ -65,7 +65,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">인재채용</a>
+                <a href="#">인재채용<span class="mo_nav_chevron"></span></a>
                 <ul class="depth_2">
                   <li><a href="#">계열사 채용정보</a></li>
                 </ul>
