--- a/index.html
+++ b/index.html
@@ -79,10 +79,6 @@
               </ul>
             </div>
             <div class="gnb_bg"></div>
-            <!-- <ul class="mo_lang">
-              <li><a href="#">kor</a></li>
-              <li><a href="#">eng</a></li>
-            </ul> -->
           </nav>
         </div>
         <div class="search_wrap">
@@ -129,9 +125,9 @@
                 <h3><span>성장동력의 혈맥</span>유통 &middot; 무역 부문</h3>
               </div>
               <ul class="busi_fam">
-                <li><a href="#"><span>GS글로벌</span></a></li>
-                <li><a href="#"><span>GS리테일</span></a></li>
-                <li><a href="#"><span>GS홈쇼핑</span></a></li>
+                <li><a href="#"><span>GS글로벌</span></a><span class="busi_on"></span></li>
+                <li><a href="#"><span>GS리테일</span></a><span></span></li>
+                <li><a href="#"><span>GS홈쇼핑</span></a><span></span></li>
               </ul>
               <p class="mo_blind">GS글로벌은 사업 및 서비스의 확장을 통해 서비스 역량 강화에 주력하고 있습니다.</p>
             </li>
@@ -141,10 +137,10 @@
                 <h3><span>지속성장의 심장</span>에너지 &middot; 발전 부문</h3>
               </div>
               <ul class="busi_fam">
-                <li><a href="#"><span>GS칼텍스</span></a></li>
-                <li><a href="#"><span>GS EPS</span></a></li>
-                <li><a href="#"><span>GS에너지</span></a></li>
-                <li><a href="#"><span>GS E&R</span></a></li>
+                <li class="busi_on_color"><a href="#"><span>GS칼텍스</span></a><span class="busi_on"></span></li>
+                <li><a href="#"><span>GS EPS</span></a><span></span></li>
+                <li><a href="#"><span>GS에너지</span></a><span></span></li>
+                <li><a href="#"><span>GS E&R</span></a><span></span></li>
               </ul>
               <p class="mo_blind">GS칼텍스는 최고의 에너지 서비스를 제공하기 위해 에너지의 새로운 가치를 만들어 가고 있습니다.</p>
             </li>
@@ -154,8 +150,8 @@
                 <h3><span>지속성장의 심장</span>건설 &middot; 서비스 부문</h3>
               </div>
               <ul class="busi_fam">
-                <li><a href="#"><span>GS건설</span></a></li>
-                <li><a href="#"><span>GS스포츠</span></a></li>
+                <li><a href="#"><span>GS건설</span></a><span class="busi_on"></span></li>
+                <li><a href="#"><span>GS스포츠</span></a><span></span></li>
               </ul>
               <p class="mo_blind">GS건설은 시공능력과 엔지니어링 기술을 확보한 최고 수준의 건설회사로 거듭나고 있습니다.</p>
             </li>
@@ -249,7 +245,7 @@
           <ul>
             <li>
               <a href="#" class="news_on">
-                <span class="news_date"><b>04.08</b><i>2021</i></span>
+                <span class="news_date"><b>04.08</b><i>2021</i><span class="news_on_bar"></span></span>
                 <p class="news_txt">
                   <strong>GS, 친환경 바이오 스타트업과 함께 미래성장 추구</strong>
                   <span>㈜GS(대표이사 홍순기 사장, 사진)가 친환경 바이오 스타트업과 함께 미래 성장의 기반을 마련한다.</span>
@@ -261,7 +257,7 @@
             </li>
             <li>
               <a href="#">
-                <span class="news_date"><b>03.30</b><i>2021</i></span>              
+                <span class="news_date"><b>03.30</b><i>2021</i><span></span></span>              
                 <p class="news_txt">
                   <strong>㈜GS, 제  1회 ESG위원회 개최, ESG경영 본격화</strong>
                   <span>㈜GS(대표이사 홍순기 사장, 사진)는 29일 오전 서울 논현로 GS타워에서 제1회 ESG위원회를 개최했다.</span>
@@ -272,13 +268,13 @@
             </li>
             <li>
               <a href="#">
-                <span class="news_date"><b>02.25</b><i>2021</i></span>              
+                <span class="news_date"><b>02.25</b><i>2021</i><span></span></span>              
                 <p class="news_txt">
                   <strong>GS, 친환경협의체 출범으로 ESG경영 강화</strong>
                   <span>GS그룹(대표 : 허태수 회장)이 친환경협의체를 출범시키며 ESG경영을 본격 추진한다.</span>
                   <b>자세히보기</b>
                 </p>
-                <span class="news_img"><img src="img/gs_news_03.png" alt=""></span>
+                <img src="img/gs_news_03.png" alt="">
                 <span class="news_chevron"></span>
               </a>
             </li>
