--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                   <span>GS그룹(대표 : 허태수 회장)이 친환경협의체를 출범시키며 ESG경영을 본격 추진한다.</span>
                   <b>자세히보기</b>
                 </p>
-                <img src="img/gs_news_03.png" alt="">
+                <img src="img/news_03.png" alt="">
                 <span class="news_chevron"></span>
               </a>
             </li>
