--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
   <title>GS그룹</title>
+  <link rel="shortcut icon" href="img/favicon.ico"/>
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/jquery.min.js"></script>
